<resources>
    <string name="app_name">VideoProject</string>
    <string name="title_activity_login">로그인</string>
    <string name="title_activity_sign_up">회원가입</string>

    <!--Strings related to login and sign up-->
    <string name="hint_email">이메일 아이디</string>
    <string name="duplication_check">중복 확인</string>
    <string name="hint_password">비밀번호</string>
    <string name="show_password">비밀번호 보이기</string>
    <string name="hint_name">이름</string>
    <string name="action_register">가입하기</string>
    <string name="forgot_password">비밀번호를 잃어버리셨나요?</string>
    <string name="action_login">로그인</string>
    <string name="action_logout">로그아웃</string>
    <string name="not_a_member">회원이 아니세요?</string>
    <string name="error_field_required">필수 입력란</string>
    <string name="error_invalid_email">유효하지 않은 이메일 형식입니다.</string>

    <!--Strings related to view-->
    <string name="next_video">다음 동영상</string>
    <string name="auto_play">자동재생</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>


</resources>
